completed coobook manual fragment
set all views, set delete and edit icons.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,6 @@
     <string name="images">Images</string>
     <string name="add_image_button_text">Add Image</string>
     <string name="add_step_button_text">Add Step</string>
+    <string name="enter_recipe_name_hint">Enter Recipe Name</string>
+    <string name="enter_recipe_description_hint">Enter Recipe Description</string>
 </resources>
