--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,12 +31,10 @@
     <string name="ingredients">Ingredients</string>
     <string name="steps">Steps</string>
     <string name="apple_pie">Apple Pie</string>
-    <string name="add_ingredient_button_text">Add ingredient</string>
-    <string name="reorder_ingredients_button_text">Reorder Ingredients</string>
-    <string name="reorder_steps_button_text">Reorder Steps</string>
+    <string name="reorder_button_text">Reorder</string>
     <string name="images">Images</string>
-    <string name="add_image_button_text">Add Image</string>
-    <string name="add_step_button_text">Add Step</string>
+    <string name="add_button_text">Add</string>
     <string name="enter_recipe_name_hint">Enter Recipe Name</string>
     <string name="enter_recipe_description_hint">Enter Recipe Description</string>
+    <string name="submit">Submit</string>
 </resources>
