Completed data structure and unit tests
Ingredient.java
Recipe.java
RecipeImage.java
Step.java
IngredientEntity.java
RecipeEntity.java
RecipeImageEntity.java
StepEntity.java
IngredientUnitTests.java
RecipeUnitTests.java
RecipeImageUnitTests.java
StepUnitTests.java
IngredientEntityUnitTests.java
RecipeEntityUnitTests.java
RecipeImageEntityUnitTests.java
StepEntityUnitTests.java

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="enter_recipe_name_hint">Enter Recipe Name</string>
     <string name="enter_recipe_description_hint">Enter Recipe Description</string>
     <string name="submit">Submit</string>
+    <string name="enter_url_of_recipe_hint">Enter url of recipe</string>
 </resources>
