--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,5 +60,13 @@
     <string name="cook">Cook</string>
     <string name="total">Total</string>
     <string name="servings">Servings</string>
+    <string name="edit_ingredient_name_hint">Enter Ingredient Name</string>
+    <string name="edit_ingredient_amount_hint">Enter Ingredient Amount</string>
+    <string name="edit_ingredient_measure_hint">Enter Ingredient Measure</string>
+    <string name="edit_ingredient_preparation_hint">Enter Ingredient Preparation</string>
+    <string name="edit_step_instruction_hint">Enter Step Instruction</string>
+    <string name="edit_step_number_hint">Enter Step Number</string>
+    <string name="keywords">Keywords</string>
+    <string name="edit_keyword_hint">Enter Keyword</string>
 
 </resources>
