created widget and added comments
added package widget
added:
cookbook_app_widget.xml
cookbook_app_widget_info.xml
cookbook_widget_item.xml
CookbookAppWidget.java
CookbookWidgetRecipe.java
CookbookWidgetRecipeUnitTests.java
StackWidgetService.java
added tests for widgets

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -193,5 +193,9 @@
     <string name="about_copyright">© 2020 Larson Apps</string>
     <string name="delete_button">Delete Button</string>
     <string name="edit_button">Edit Button</string>
+    <string name="appwidget_text">Personal Cookbook</string>
+    <string name="add_widget">Add widget</string>
+    <string name="cookbook_widget_text">Recipes</string>
+    <string name="cookbook_widget_empty_text">No Recipes</string>
 
 </resources>
